--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "DEVIL-TECH",
+  "name": "DEVIL-TECH-MD",
   "version": "1.0.0",
-  "description": "A WhatsApp Bot Created By ᴄʏʙᴇʀ ʟᴏᴋᴜ ᴀꜱʜᴜᴜ",
+  "description": "A WhatsApp Bot Created By deviltech6",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name DEVIL-TECH",
-    "stop": "pm2 stop DEVIL-TECH",
-    "restart": "pm2 restart DEVIL-TECH"
+    "start": "pm2 start index.js --deep-monitoring --attach --name DEVIL-TECH-MD",
+    "stop": "pm2 stop DEVIL-TECH-MD",
+    "restart": "pm2 restart DEVIL-TECH-MD"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.6.0",
+   "@whiskeysockets/baileys": "github:AxellNetwork/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
