--- a/app.json
+++ b/app.json
@@ -86,7 +86,7 @@
     "OWNER_NAME": {
       "description": "Type Bot Owner Name.",
       "required": false,
-      "value": "𝚌𝚢𝚋𝚎𝚛𝚊𝚜𝚑𝚞𝚞"
+      "value": "deviltech6"
 }, 
 
     "OWNER_NUMBER": {
