--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "ALI-MD",
-  "description": "Javascript WhatsApp bot made by ALI",
-  "logo": "https://cdn.ironman.my.id/i/2du3i5.jpg",
-  "keywords": ["ALI-MD"],
+  "name": "DEVIL-TECH-MD",
+  "description": "Javascript WhatsApp bot made by CYBER LOKU ASHUU OFC",
+  "logo": "https://files.catbox.moe/4854y4.jpg",
+  "keywords": ["DEVIL-TECH-MD"],
   "success_url": "/",
 
     "stack": "container",
@@ -16,7 +16,7 @@
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
       "required": false,
-      "value": "𓆩ု᪳DEVIL-TECH-MDှ᪳𓆪"
+      "value": "DEVIL-TECH-MD"
     }, 
       
     "PREFIX": {
@@ -86,14 +86,14 @@
     "BOT_NAME": {
       "description": "Type here the bot name.",
       "required": false,
-      "value": "𓆩ု᪳DEVIL-TECH-MDှ᪳𓆪"
+      "value": "DEVIL-TECH-MD"
 
       }, 
     
     "ALIVE_IMG": {
       "description": "put here the bot Menu url if you don't have you can use this public url.",
       "required": true,
-      "value": "https://cdn.ironman.my.id/i/2du3i5.jpg" 
+      "value": "https://files.catbox.moe/4854y4.jpg" 
       },
 
     "ANTI_LINK": {
